--- a/Results.ipynb
+++ b/Results.ipynb
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 127,
    "id": "e3ed6f4d-5fc5-42fc-805d-260a40c72ec4",
    "metadata": {},
    "outputs": [
@@ -531,7 +531,7 @@
        "9       $25,381,407             $310,094,574  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 128,
    "id": "0864029a-596e-44fd-b889-ecefeede9e4e",
    "metadata": {},
    "outputs": [
@@ -1433,7 +1433,7 @@
        "59                                   Moana         Ron Clements  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 129,
    "id": "48001ec9-ad1f-4e68-81f0-fa152d9023fa",
    "metadata": {},
    "outputs": [],
@@ -1458,12 +1458,14 @@
     "merged_df['inflation_adjusted_gross']= merged_df['inflation_adjusted_gross'].str.replace('\\$|,', '', regex=True).fillna(0)\n",
     "\n",
     "# Cast String column to int for sum calculation\n",
-    "merged_df.inflation_adjusted_gross = pd.to_numeric(merged_df.inflation_adjusted_gross, errors='coerce')\n"
+    "merged_df.inflation_adjusted_gross = pd.to_numeric(merged_df.inflation_adjusted_gross, errors='coerce')\n",
+    "\n",
+    "# Additional step that can be taken is check for duplicates and remove them"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 130,
    "id": "de556ce1-31df-4e16-b95f-33eb593c1787",
    "metadata": {},
    "outputs": [
@@ -2351,7 +2353,7 @@
        "59                                   Moana         Ron Clements  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2845,13 +2847,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 124,
    "id": "78c13dd0-5b6d-4825-ab00-46785447976b",
    "metadata": {},
    "outputs": [],
    "source": [
     "directors_with_5_or_more_titles = titles_per_director_sorted[titles_per_director_sorted['number_of_titles'] >= 5]['director']\n",
-    "\n",
+    "# Better to place everything into a function for reusability\n",
     "# Only contain rows for the two directors above\n",
     "mean_gross_by_director = merged_df[merged_df['director'].isin(directors_with_5_or_more_titles)]\n",
     "\n",
@@ -2862,7 +2864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 125,
    "id": "4cfdf41d-a2b1-468d-94df-ff61f6558ee0",
    "metadata": {},
    "outputs": [
@@ -2912,7 +2914,7 @@
        "0         Ron Clements             188421371.429"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
